<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/Title"
                android:id="@+id/title"
                android:text="@string/hello"
                android:layout_marginBottom="10dp"/>

            <LinearLayout
                android:id="@+id/buttons_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <Button
                    style="@style/Button"
                    android:id="@+id/sign_in_first"
                    android:text="@string/sign_in"
                    android:layout_weight="1"
                    android:layout_marginEnd="10dp"
                    android:onClick="onClick"/>

                <Button
                    style="@style/Button"
                    android:id="@+id/sign_up_first"
                    android:text="@string/sign_up"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    android:onClick="onClick"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/sign_in_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:visibility="gone">

                <EditText
                    style="@style/Input"
                    android:id="@+id/sign_in_login"
                    android:inputType="textPersonName"
                    android:hint="@string/login"/>

                <EditText
                    style="@style/Input"
                    android:id="@+id/sign_in_password"
                    android:inputType="textPassword"
                    android:hint="@string/password"/>

                <Button
                    style="@style/Button"
                    android:id="@+id/sign_in_second"
                    android:text="@string/sign_in"
                    android:onClick="onClick"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/sign_up_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:visibility="gone">

                <EditText
                    style="@style/Input"
                    android:id="@+id/sign_up_personName"
                    android:inputType="textPersonName"
                    android:hint="@string/user_name"/>

                <EditText
                    style="@style/Input"
                    android:id="@+id/sign_up_email"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"/>

                <EditText
                    style="@style/Input"
                    android:id="@+id/sign_up_login"
                    android:inputType="textPersonName"
                    android:hint="@string/login"/>

                <EditText
                    style="@style/Input"
                    android:id="@+id/sign_up_password"
                    android:inputType="textPassword"
                    android:hint="@string/password"/>

                <EditText
                    style="@style/Input"
                    android:id="@+id/sign_up_repeat_password"
                    android:inputType="textPassword"
                    android:hint="@string/repeat_password"/>

                <Button
                    style="@style/Button"
                    android:id="@+id/sign_up_second"
                    android:text="@string/sign_up"
                    android:onClick="onClick" />
                
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>